--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <body bgcolor=white>
         <h3>
             <b>
-                <bgcolor=gray> Personal Detail:</b>
+                 Personal Detail:</b>
         </h3>
 
         <img src="yeah.jpeg" align=right height="95" width="85">
         <br>
+       <font size=2> 
         <b> Name:</b> Muhammad Ali
         <br>
         <b> Fathers Name:</b> Ghulam Muhammad
@@ -26,6 +27,7 @@
         <br>
         <b> Address:</b>Pindi ay Bawa gee...
         <br>
+       <font>
 
 
 
@@ -113,4 +115,4 @@
 
 
 
-</html>
+</html>🙂
