--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
         <br>
         <b> Address:</b>Pindi ay Bawa gee...
         <br>
-       <font>
+       </font>
 
 
 
         <h3>
             <b> Educational Detail:</b>
         </h3>
+       <font size =2>
 
         <table board=1>
             <table cellspacing=20>
@@ -64,7 +65,7 @@
                 <b> BS CS </b> From
                 <b>Islamic International University Islamabad</b>
             </i>
-
+           </font>
             <h3>
                 <b> Experience:</b>
             </h3>
