--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
         <h3>
             <b> Educational Detail:</b>
         </h3>
-       <font size =1>
 
         <table board=1>
             <table cellspacing=20>
@@ -63,7 +62,7 @@
                 <b> BS CS </b> From
                 <b>Islamic International University Islamabad</b>
             </i>
-           </font>
+
             <h3>
                 <b> Experience:</b>
             </h3>
@@ -104,7 +103,7 @@
             <i> To be furnished upon Demanad....</i>
 
             <div style="margin:10px 450px">
-                <video width="420" height="340" controls>
+                <video width="420" height="340" align=left controls>
                     <source src="no.mp4" type="video/mp4"> 
                     Your browser does not support HTML5 video.
                 </video>
