--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
 
-    <body bgcolor=white>
+    <body bgcolor=87CEEB>
         <h3>
             <b>
                  Personal Detail:</b>
@@ -34,6 +34,7 @@
         </h3>
 
         <table board=1>
+          <Font size=2>
             <table cellspacing=20>
                 <th> Board</th>
                 <th>Program </th>
@@ -57,6 +58,7 @@
                     <td> A </td>
                     <td>F.G Liaquat Ali Degree Collage</td>
                 </tr>
+              </Font>
             </table>
             <i> Currently doing
                 <b> BS CS </b> From
