--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
 
-    <body bgcolor=87CEEB>
+    <body bgcolor=white>
         <h3>
             <b>
                  Personal Detail:</b>
@@ -32,9 +32,9 @@
         <h3>
             <b> Educational Detail:</b>
         </h3>
+       
 
-        <table board=1>
-          <Font size=2>
+        <table board=1><font size=2>
             <table cellspacing=20>
                 <th> Board</th>
                 <th>Program </th>
@@ -57,14 +57,13 @@
                     <td> 76% </td>
                     <td> A </td>
                     <td>F.G Liaquat Ali Degree Collage</td>
-                </tr>
-              </Font>
+                </tr></font>
             </table>
             <i> Currently doing
                 <b> BS CS </b> From
                 <b>Islamic International University Islamabad</b>
             </i>
-
+           </font>
             <h3>
                 <b> Experience:</b>
             </h3>
@@ -105,7 +104,7 @@
             <i> To be furnished upon Demanad....</i>
 
             <div style="margin:10px 450px">
-                <video width="420" height="340" align=left controls>
+                <video width="420" height="340" controls>
                     <source src="no.mp4" type="video/mp4"> 
                     Your browser does not support HTML5 video.
                 </video>
